[gd_scene load_steps=5 format=3 uid="uid://c7pnl4db36vqd"]

[ext_resource type="Script" path="res://level_areas/level_area.gd" id="1_yie24"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_tdp3r"]
load_path = "res://.godot/imported/Tiles.png-09e3593dbc228050be977c1d34ee73f4.ctex"

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8gi7g"]
texture = SubResource("CompressedTexture2D_tdp3r")
2:4/0 = 0
2:4/0/terrain_set = 0
2:4/0/terrain = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0/terrains_peering_bit/right_side = 0
2:4/0/terrains_peering_bit/bottom_side = 0
3:4/0 = 0
3:4/0/terrain_set = 0
3:4/0/terrain = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0/terrains_peering_bit/right_side = 0
3:4/0/terrains_peering_bit/bottom_side = 0
3:4/0/terrains_peering_bit/left_side = 0
4:4/0 = 0
4:4/0/terrain_set = 0
4:4/0/terrain = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0/terrains_peering_bit/bottom_side = 0
4:4/0/terrains_peering_bit/left_side = 0
2:5/0 = 0
2:5/0/terrain_set = 0
2:5/0/terrain = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0/terrains_peering_bit/right_side = 0
2:5/0/terrains_peering_bit/bottom_side = 0
2:5/0/terrains_peering_bit/top_side = 0
3:5/0 = 0
3:5/0/terrain_set = 0
3:5/0/terrain = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0/terrains_peering_bit/right_side = 0
3:5/0/terrains_peering_bit/bottom_side = 0
3:5/0/terrains_peering_bit/left_side = 0
3:5/0/terrains_peering_bit/top_side = 0
4:5/0 = 0
4:5/0/terrain_set = 0
4:5/0/terrain = 0
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:5/0/terrains_peering_bit/bottom_side = 0
4:5/0/terrains_peering_bit/left_side = 0
4:5/0/terrains_peering_bit/top_side = 0
2:6/0 = 0
2:6/0/terrain_set = 0
2:6/0/terrain = 0
2:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:6/0/physics_layer_0/angular_velocity = 0.0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:6/0/terrains_peering_bit/right_side = 0
2:6/0/terrains_peering_bit/top_side = 0
3:6/0 = 0
3:6/0/terrain_set = 0
3:6/0/terrain = 0
3:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:6/0/physics_layer_0/angular_velocity = 0.0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:6/0/terrains_peering_bit/right_side = 0
3:6/0/terrains_peering_bit/left_side = 0
3:6/0/terrains_peering_bit/top_side = 0
4:6/0 = 0
4:6/0/terrain_set = 0
4:6/0/terrain = 0
4:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:6/0/physics_layer_0/angular_velocity = 0.0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:6/0/terrains_peering_bit/left_side = 0
4:6/0/terrains_peering_bit/top_side = 0
0:7/0 = 0
0:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:7/0/physics_layer_0/angular_velocity = 0.0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, 0, 8, 8, -8, 8)
1:7/0 = 0
1:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:7/0/physics_layer_0/angular_velocity = 0.0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 0, 8, 8, -8, 8)
2:7/0 = 0
2:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:7/0/physics_layer_0/angular_velocity = 0.0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 0, 8, 8, -8, 8)
3:7/0 = 0
3:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:7/0/physics_layer_0/angular_velocity = 0.0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 0, 8, -8, 8, 8, -8, 8)
0:8/0 = 0
0:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:8/0/physics_layer_0/angular_velocity = 0.0
0:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:8/0 = 0
1:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:8/0/physics_layer_0/angular_velocity = 0.0
1:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:8/0 = 0
2:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:8/0/physics_layer_0/angular_velocity = 0.0
2:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:8/0 = 0
3:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:8/0/physics_layer_0/angular_velocity = 0.0
3:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_3lt5m"]
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 0
terrain_set_0/mode = 2
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.501961, 0.345098, 0.25098, 1)
sources/0 = SubResource("TileSetAtlasSource_8gi7g")

[node name="LevelArea" type="Node2D"]
script = ExtResource("1_yie24")

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(4, 4)
tile_set = SubResource("TileSet_3lt5m")
format = 2

[node name="Enemies" type="Node2D" parent="."]

[node name="Markers" type="Node2D" parent="."]

[node name="MarkStart" type="Marker2D" parent="Markers"]
position = Vector2(-151, -83)
gizmo_extents = 32.0

[node name="MarkEnd" type="Marker2D" parent="Markers"]
position = Vector2(2000, -100)
gizmo_extents = 32.0

[node name="Notifiers" type="Node2D" parent="."]
position = Vector2(0, 6.10352e-05)

[node name="LoadNextNotifier" type="VisibleOnScreenNotifier2D" parent="Notifiers"]
position = Vector2(12, 2.99994)
rect = Rect2(2.08165e-12, 2.08165e-12, 100, 900)

[node name="RemoveNotifier" type="VisibleOnScreenNotifier2D" parent="Notifiers"]
position = Vector2(1799, 1.99994)
rect = Rect2(2.08165e-12, 2.08165e-12, 100, 900)

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
